--- a/HOME.html
+++ b/HOME.html
@@ -9,18 +9,25 @@
 </head>
 <body>
 
-       <a href="Aveo Script/as HOME.html" class="div_link">
-    <div class="aveo_script">
-   AVEO SCRIPT
-    </div>
-       </a>
+    <div class="container">
+        <a href="Aveo Script/as HOME.html">
+ <div class="AveoScript" >[aveo_script_imgref.png]</div>
+ </a>
 
+ <a href="AboutCreator/Home/ArchepatzHOME.html">
+ <div class="Archepatz" >[archepatz_impgref.png]</div>
+</div>
+</a>
 
-       <a href="AboutCreator/Home/ArchepatzHOME.html" class="div_link">
-    <div class="archepatz">
-        ARCHEPATZ'S
-    </div>
-        </a>
+ <!-- DROPDOWN MENU  -->
+  <div class="logo"> 
+    [LOGO_imgref.png] 
+    <ul class="dropdown_options">
+        <li>MAIN_HOME</li>
+        <li>AVEO_SCRIPT_HOME</li>
+        <li>ARCHEPATZ_HOME</li>
+    </ul>
+  </div>
    
 </body>
 
