--- a/AboutCreator/Home/ArchepatzHOME.html
+++ b/AboutCreator/Home/ArchepatzHOME.html
@@ -9,25 +9,35 @@
 </head>
 <body>
     
+
 <div class="posts">
     <img src="lock.png" alt="" class="lock_resize" height="50" width="50">
-   POSTS
+posts
 </div>
-
+    
 <div class="minigames">
     <img src="lock.png" alt="" class="lock_resize" height="50" width="50">
-    MINIGAMES
+minigames
 </div>
 
 <div class="gallery">
-    <img src="lock.png" alt="" class="lock_resize" height="50" width="50">
-    GALLERY
+ <img src="lock.png" alt="" class="lock_resize" height="50" width="50">
+gallery
 </div>
 
-<div class="creator">
-    <img src="lock.png" alt="" class="lock_resize" height="50" width="50">
-    CREATOR
-</div>
+<!-- FOR NOW ONLY ACTIVE LINK -->
+ <!-- leads to the temporary journals site -->
+
+<a class="a_container" href="../Journals/journals_temporary_site.html">
+    <div class="creator">
+        creator
+    </div>
+</a>
+
+
+
+
+
 
 </body>
 </html>
