--- a/AboutCreator/Journals/website_progress.html
+++ b/AboutCreator/Journals/website_progress.html
@@ -44,6 +44,11 @@ But just imagine the final result. ;D
 <img class="image01" src="../Journals/added_mages /foto01.png" alt="current state">
 (first prototype state)
 
+<img class="image01" src="../Journals/added_mages /foto02.png" alt="current main home page">
+(first structured main home placeholders, already set up for actual images)
+
+
+
 </div>
 
 </body>
