--- a/AboutCreator/Journals/aveoscript_progress.html
+++ b/AboutCreator/Journals/aveoscript_progress.html
@@ -25,6 +25,13 @@ Soundtrack in pending status.
 I would LOVE to animate more. For NOW the only opportunity to do so occurs after coming back home after 8pm. For now.
 Good that I can at least code during my breaks or when going by train, otherwise I wouldn't be progressing at all- o_O
 
+🍜 23/10/2025 🍜
+YE-
+Episode's 01 intro animation bases almost finished (TODAY IS THE DAY-).
+AND I was making a new minigame... BEFORE a PERFECT idea for a WHOLE game appeared-
+
+In other words: In a few weeks I'll definitely need game testers. XD XD XD
+
 
 </div>
 
