--- a/AboutCreator/Journals/website_progress.html
+++ b/AboutCreator/Journals/website_progress.html
@@ -41,12 +41,8 @@ Basically anything related to the 'Aveo Script' area.
 Again, it will take MONTHS before it all is finished-
 But just imagine the final result. ;D
 
-<img class="image01" src="../Journals/added_mages /foto01.png" alt="current state">
-(first prototype state)
-
-<img class="image01" src="../Journals/added_mages /foto02.png" alt="current main home page">
-(first structured main home placeholders, already set up for actual images)
-
+🍜 23/10/2025 🍜
+Prototype skeleton's changes commited per server host page!!
 
 
 </div>
