--- a/HOME.html
+++ b/HOME.html
@@ -9,6 +9,21 @@
 </head>
 <body>
 
+
+  <div class="SORRY_MESSAGE">
+
+    WEBSITE TEMPORARILY PRIVATE!!
+    Our dear HTML project needs to wait a few months!
+
+    Private career aspects, delivery of content for upcoming deadlines, intensive focus on 'Aveo Script'.
+    Those are the reasons for a break in website's development!
+
+    As always, keep on working!!
+    Archepatz
+  </div>
+
+
+  <!--
     <div class="container">
         <a href="Aveo Script/as HOME.html">
  <div class="AveoScript" >[aveo_script_imgref.png]</div>
@@ -19,7 +34,7 @@
 </div>
 </a>
 
- <!-- DROPDOWN MENU  -->
+
   <div class="logo"> 
     [LOGO_imgref.png] 
     <ul class="dropdown_options">
@@ -33,5 +48,7 @@
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+
+-->
 
 </html>
